Remove compiled bytecode

--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -1214,7 +1214,9 @@
 
       let viewer = null,
         gallery = [],
-        assistantCount = 0;
+        assistantCount = 0,
+        ws = null,
+        messageIndex = 0;
 
       function fitViewer() {
         if (!viewer || !viewer.classList.contains("full")) return;
@@ -1353,6 +1355,69 @@
         await streamNode(tempDiv, element);
       }
 
+      async function streamFromSocket(bubble) {
+        let text = "";
+        let done = false;
+        let resolve;
+        const queue = [];
+
+        const waitForData = () =>
+          new Promise((r) => {
+            resolve = r;
+          });
+
+        const process = async () => {
+          while (!done || queue.length) {
+            if (queue.length === 0) {
+              await waitForData();
+              continue;
+            }
+            const chunk = queue.shift();
+            if (chunk === "__DONE__") {
+              done = true;
+              continue;
+            }
+            text += chunk;
+            bubble.innerHTML = marked.parse(text, {
+              gfm: true,
+              breaks: true,
+            });
+            if (autoStick) {
+              if (body.classList.contains("game")) {
+                const msgEl = bubble.closest(".message");
+                if (msgEl)
+                  scrollMessageIntoPosition(msgEl, { behavior: "auto" });
+              } else {
+                scrollToBottom("auto");
+              }
+            }
+            await new Promise((res) => setTimeout(res, 30));
+          }
+          const wrap = bubble.closest(".message");
+          if (wrap) {
+            wrap.classList.remove("streaming");
+            promptInput.disabled = false;
+            sendBtn.disabled = false;
+            promptInput.focus();
+          }
+        };
+
+        process();
+
+        ws.addEventListener("message", function handler(ev) {
+          const data = JSON.parse(ev.data);
+          if (data.type === "chunk") {
+            queue.push(data.data);
+            if (resolve) resolve();
+          }
+          if (data.type === "done") {
+            queue.push("__DONE__");
+            if (resolve) resolve();
+            ws.removeEventListener("message", handler);
+          }
+        });
+      }
+
       async function addMessage(text, { from = "assistant", img } = {}) {
         if (from === "assistant" && !img) {
           img = `https://picsum.photos/seed/${Date.now()}/1024/600`;
@@ -1361,6 +1426,7 @@
         wrap.className = `message ${from}`;
         wrap.style.animation = "fadeIn .2s forwards";
         wrap.dataset.rawText = text;
+        wrap.dataset.index = messageIndex++;
 
         const att = document.createElement("div");
         att.className = "attachments";
@@ -1460,7 +1526,7 @@
 
         if (img && viewer) openViewer(img, { animationHint: "new" });
 
-        if (from === "assistant") {
+        if (from === "assistant" && text) {
           wrap.classList.add("streaming");
           promptInput.disabled = true;
           sendBtn.disabled = true;
@@ -1876,6 +1942,16 @@
             const newRawText = bubble.innerText;
             msgEl.dataset.rawText = newRawText;
 
+            if (ws && ws.readyState === WebSocket.OPEN) {
+              ws.send(
+                JSON.stringify({
+                  action: "edit_message",
+                  index: parseInt(msgEl.dataset.index),
+                  text: newRawText,
+                })
+              );
+            }
+
             bubble.contentEditable = false;
             bubble.innerHTML = marked
               .parse(newRawText, { gfm: true, breaks: true })
@@ -1912,8 +1988,21 @@
             finishEdit();
           }
         }
-        if (e.target.matches(".regenerate-btn"))
-          console.log("Regenerate", e.target.closest(".message"));
+        if (e.target.matches(".regenerate-btn")) {
+          const msgEl = e.target.closest(".message");
+          if (ws && ws.readyState === WebSocket.OPEN) {
+            ws.send(
+              JSON.stringify({
+                action: "regenerate",
+                index: parseInt(msgEl.dataset.index),
+              })
+            );
+            const bubble = msgEl.querySelector(".bubble");
+            bubble.innerHTML = "";
+            msgEl.classList.add("streaming");
+            streamFromSocket(bubble);
+          }
+        }
       });
 
       promptForm.addEventListener("submit", async (e) => {
@@ -1948,9 +2037,16 @@
           }
         }
 
-        await new Promise((r) => setTimeout(r, 700));
+        const assistantEl = await addMessage("", { from: "assistant" });
+        const bubble = assistantEl.querySelector(".bubble");
 
-        await addMessage(generateRandomMultilineText());
+        if (ws.readyState === WebSocket.OPEN) {
+          ws.send(
+            JSON.stringify({ action: "send_message", text: userText })
+          );
+
+          streamFromSocket(bubble);
+        }
       });
 
       qs("#collapse-sidebar-btn").onclick = () =>
@@ -1967,6 +2063,9 @@
         gallery = [];
         assistantCount = 0;
         closeViewer();
+        if (ws && ws.readyState === WebSocket.OPEN) {
+          ws.send(JSON.stringify({ action: "new_chat" }));
+        }
       };
 
       window.addEventListener("keydown", (e) => {
@@ -2512,10 +2611,17 @@ What do you do? Type \`~\` to see available commands.`
         });
       }
 
+      function setupWebSocket() {
+        const url = (location.protocol === "https:" ? "wss://" : "ws://") +
+          location.host + "/ws";
+        ws = new WebSocket(url);
+      }
+
       initializeChat();
       setupPromptAutoResize();
       setupSettings();
       setupCommandPalette();
+      setupWebSocket();
     </script>
   </body>
 </html>
