fix streaming animation

--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>ROAM – AI Text Adventure</title>
 
-    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="static/styleguide.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
       rel="stylesheet"
@@ -20,6 +20,7 @@
     />
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="static/morphdom.min.js"></script>
 
     <style>
       :root {
@@ -1355,12 +1356,7 @@
         await streamNode(tempDiv, element);
       }
 
-      async function streamTextIncremental(
-        element,
-        markdownText,
-        state,
-        { speed = 30 } = {}
-      ) {
+      async function streamTextIncremental(element, markdownText, state, { speed = 30 } = {}) {
         const html = marked
           .parse(markdownText, { gfm: true, breaks: true })
           .trim();
@@ -1369,64 +1365,54 @@
         tempDiv.innerHTML = html;
 
         let wordIndex = 0;
-
-        const streamNode = async (sourceNode, targetElement) => {
-          for (const child of Array.from(sourceNode.childNodes)) {
+        const buildNode = (source, target) => {
+          for (const child of Array.from(source.childNodes)) {
             if (child.nodeType === Node.TEXT_NODE) {
               const parts = child.textContent.split(/(\s+)/);
               for (const part of parts) {
                 if (part.length === 0) continue;
 
                 const isSpace = part.trim().length === 0;
-                if (wordIndex < state.count) {
-                  if (isSpace) targetElement.appendChild(document.createTextNode(part));
-                  else targetElement.appendChild(document.createTextNode(part));
+                if (isSpace) {
+                  target.appendChild(document.createTextNode(part));
                 } else {
-                  if (isSpace) {
-                    targetElement.appendChild(document.createTextNode(part));
-                  } else {
-                    const span = document.createElement("span");
-                    span.textContent = part;
+                  const span = document.createElement("span");
+                  span.textContent = part;
+                  span.id = `w${wordIndex}`;
+                  if (wordIndex >= state.count) {
                     span.style.display = "inline-block";
-                    span.style.animation = "wordFadeIn 0.4s ease-out forwards";
-                    targetElement.appendChild(span);
-                    if (autoStick) {
-                      if (body.classList.contains("game")) {
-                        const msgEl = element.closest(".message");
-                        if (msgEl)
-                          scrollMessageIntoPosition(msgEl, { behavior: "auto" });
-                      } else {
-                        scrollToBottom("auto");
-                      }
-                    }
-                    await new Promise((r) => setTimeout(r, speed));
+                    span.style.opacity = 0;
+                    span.style.animation = `wordFadeIn 0.4s ease-out forwards`;
+                    span.style.animationDelay = `${(wordIndex - state.count) * speed}ms`;
                   }
+                  target.appendChild(span);
+                  wordIndex++;
                 }
-                if (!isSpace) wordIndex++;
               }
             } else if (child.nodeType === Node.ELEMENT_NODE) {
-              const newElement = document.createElement(child.tagName);
+              const el = document.createElement(child.tagName);
               for (const attr of child.attributes) {
-                newElement.setAttribute(attr.name, attr.value);
+                el.setAttribute(attr.name, attr.value);
               }
-              targetElement.appendChild(newElement);
-
-              if (autoStick) {
-                if (body.classList.contains("game")) {
-                  const msgEl = element.closest(".message");
-                  if (msgEl)
-                    scrollMessageIntoPosition(msgEl, { behavior: "auto" });
-                } else {
-                  scrollToBottom("auto");
-                }
-              }
-
-              await streamNode(child, newElement);
+              buildNode(child, el);
+              target.appendChild(el);
             }
           }
         };
 
-        await streamNode(tempDiv, element);
+        const container = document.createElement("div");
+        buildNode(tempDiv, container);
+
+        morphdom(element, container, {
+          childrenOnly: true,
+          onBeforeElUpdated: (fromEl, toEl) => {
+            if (fromEl.id && fromEl.id.startsWith("w") && fromEl.id === toEl.id) {
+              return false;
+            }
+            return true;
+          },
+        });
+
         state.count = wordIndex;
       }
 
@@ -1443,7 +1429,6 @@
           });
 
         const render = async () => {
-          bubble.innerHTML = "";
           await streamTextIncremental(bubble, text, state, { speed: 30 });
         };
 
