--- a/web/main page/app.html
+++ b/web/main page/app.html
@@ -1406,7 +1406,12 @@
         morphdom(element, container, {
           childrenOnly: true,
           onBeforeElUpdated: (fromEl, toEl) => {
-            if (fromEl.id && fromEl.id.startsWith("w") && fromEl.id === toEl.id) {
+            if (
+              fromEl.id &&
+              fromEl.id.startsWith("w") &&
+              fromEl.id === toEl.id &&
+              fromEl.textContent === toEl.textContent
+            ) {
               return false;
             }
             return true;
@@ -1430,6 +1435,15 @@
 
         const render = async () => {
           await streamTextIncremental(bubble, text, state, { speed: 30 });
+          if (autoStick) {
+            if (body.classList.contains("game") && settings.gameModePinning) {
+              const msgEl = bubble.closest(".message");
+              if (msgEl)
+                scrollMessageIntoPosition(msgEl, { behavior: "auto" });
+            } else if (!body.classList.contains("game")) {
+              scrollToBottom("auto");
+            }
+          }
         };
 
         const process = async () => {
